--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,18 @@
 
 # production
 /build
+/dist
+
+#editors
+.vscode
+.idea
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.log
