--- a/package.json
+++ b/package.json
@@ -1,44 +1,49 @@
 {
   "name": "website",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.1.0",
+  "description": "Open Data on Covid19",
   "homepage": "https://www.ioconto.org/",
+  "author": "Covid19 Open Data Team",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^4.4.1",
-    "node-sass": "^4.13.1",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "bootstrap-vue": "^2.12.0",
+    "core-js": "^3.6.4",
+    "csvtojson": "^2.0.10",
+    "dotenv": "^8.2.0",
+    "extract-zip": "^2.0.0",
+    "http-server": "^0.12.1",
+    "kafka-logger": "^7.1.0",
+    "leaflet": "^1.6.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "mysql": "^2.18.1",
+    "vue": "^2.6.11",
+    "vue-bootstrap-typeahead": "^0.2.6",
+    "vue-i18n": "^8.17.3",
+    "vue2-leaflet": "^2.5.2",
+    "winston": "^3.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "postinstall": "node ./src/scripts/postinstall",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ingestion": "node src/ingestion",
+    "pull-data": "node src/pull",
+    "processing": "node src/processing",
+    "generate:geojson": "node src/geoJson",
+    "serve-static": "node ./node_modules/http-server/bin/http-server src/website/www",
+    "serve": "vue-cli-service serve ./src/website/vue/src/main.js --open",
+    "build": "vue-cli-service build ./src/website/vue/src/main.js",
+    "lint": "vue-cli-service lint ./src/website/vue/src/main.js",
     "predeploy": "npm run build && cp CNAME build/CNAME",
-    "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.3.0",
+    "@vue/cli-plugin-eslint": "~4.3.0",
+    "@vue/cli-service": "~4.3.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11",
     "gh-pages": "^2.2.0"
   }
 }
