--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-bootstrap-typeahead": "^0.2.6",
     "vue-gtag": "^1.6.2",
     "vue-i18n": "^8.17.3",
+    "vue-meta": "^2.3.3",
     "vue-router": "^3.1.6",
     "vue2-leaflet": "^2.5.2",
     "winston": "^3.2.1"
